--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.24.2
   go_router: ^13.0.0
   flutter_riverpod: ^2.4.9
+  firebase_ui_auth: ^1.11.0
+  firebase_ui_firestore: ^1.5.15
+  firebase_auth: ^4.15.3
 
 dev_dependencies:
   flutter_test:
