--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_ui_firestore: ^1.5.15
   firebase_auth: ^4.15.3
   equatable: ^2.0.5
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
