--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.15.3
   equatable: ^2.0.5
   cloud_firestore: ^4.13.6
+  plaid_flutter: ^3.1.4
 
 dev_dependencies:
   flutter_test:
