--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   equatable: ^2.0.5
   cloud_firestore: ^4.13.6
   plaid_flutter: ^3.1.4
+  riverpod_annotation: ^2.3.3
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.3.9
+  build_runner: ^2.4.7
+  mocktail: ^1.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
