--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   plaid_flutter: ^3.1.4
   riverpod_annotation: ^2.3.3
   rxdart: ^0.27.7
+  flutter_secure_storage: ^9.0.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
