--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   rxdart: ^0.27.7
   flutter_secure_storage: ^9.0.0
   get: ^4.6.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
