--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   get: ^4.6.6
   intl: ^0.18.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
