--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   get: ^4.6.6
   intl: ^0.18.1
   cached_network_image: ^3.3.1
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
