--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.18.1
   cached_network_image: ^3.3.1
   firebase_storage: ^11.6.0
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,23 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo/logo.png"
+  remove_alpha_ios: true
+  web:
+    generate: true
+    background_color: "#05476D"
+    theme_color: "#FFFFFF"
+  windows:
+    generate: true
+    icon_size: 48
+  macos:
+    generate: true
+  # https://github.com/fluttercommunity/flutter_launcher_icons/issues/144
+  adaptive_icon_background: "assets/logo/background.png"
+  adaptive_icon_foreground: "assets/logo/foreground.png"
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -78,9 +95,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - assets/documents/
+  - assets/logo/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
