--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.3.1
   firebase_storage: ^11.6.0
   uuid: ^4.2.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
