--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,9 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<key>NSCameraUsageDescription</key>
-	<key>NSMicrophoneUsageDescription</key>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -48,5 +45,17 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	
+	<key>NSPhotoLibraryUsageDescription</key>
+
+	<string>Need to upload image</string>
+
+	<key>NSCameraUsageDescription</key>
+
+	<string>Need to upload image</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+
+	<string>Need to upload image</string>
 </dict>
 </plist>
